--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ html, body {
     max-width: 1260px;
     padding: 0 15px;
     margin: 0 auto;
-    height: 100%;
+    min-height: 100%;
 }
 
 .main__about {
